--- a/Glitch Garden/Packages/manifest.json
+++ b/Glitch Garden/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "2.8.2",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.feature.worldbuilding": "1.0.1",
